--- a/tex/relatedWork.tex
+++ b/tex/relatedWork.tex
@@ -2,14 +2,14 @@
 In this section I briefly present two projects whose aim is to enable interoperability between Proof of Stake and Proof of Work blockchains, so conceptually similar to what we want to achieve. 
 
 \subsection{Gravity: Cosmos $\leftrightarrow$ Ethereum}
-Gravity bridge is a Cosmos $\leftrightarrow$ Ethereum bridge designed to run on the Cosmos Hub and focused on maximizing simplicity and efficiency. Trust in the integrity of the Gravity bridge is anchored on the Cosmos side. The signing of fraudulent validator set updates and transaction batches meant for the Ethereum contract is punished by slashing on the Cosmos chain. If you trust the Cosmos chain, you can trust the Gravity bridge operated by it, as long as it is operated within certain parameters. 
+Gravity bridge is a Cosmos $\leftrightarrow$ Ethereum bridge designed to run on the Cosmos Hub and focused on maximizing simplicity and efficiency. Trust in the integrity of the Gravity bridge is anchored on the Cosmos side. In fact, the signing of fraudulent validator set updates and transaction batches meant for the Ethereum contract is punished by slashing on the Cosmos chain. If you trust the Cosmos chain, you can trust the Gravity bridge operated by it, as long as it is operated within certain parameters. 
 
 \subsection{Waterloo:  EOS $\leftrightarrow$ Ethereum}
-Waterloo is a bi-directional EOS $\leftrightarrow$ Ethereum relay that instead of relaying all EOS block headers, relayers only relay the changes in the set of EOS block producers (BP). Let's have a closer look at the relay in the EOS $\rightarrow$ Ethereum direction.\\The consensus protocol of EOS is Delegated Proof of Stake (DPoS). EOS token holders are continuously voting (delegating) for their favorite block producer. The 21 block producers who receive the most votes produce blocks in a round robin manner. Each producer generates up to 12 blocks and send them to the network. Each block extends the last block in the chain and it is digitally signed by the block producer. The voting process itself also occurs on chain, and the outcome of the voting is reflected in a block header. Namely, whenever the set of BP changes, the public keys of the new BP set are encoded in a dedicated block header. \\The underlying security assumption of the EOS protocol is that 2/3+1 of the BP set is honest. I.e., 15 out of the 21 BPs are always honest. \\Waterloo relay is a smart contract that verifies EOS actions in the following way:
+Waterloo is a bi-directional EOS $\leftrightarrow$ Ethereum relay. Let's have a closer look at the relay in the EOS $\rightarrow$ Ethereum direction.\\The consensus protocol of EOS is Delegated Proof of Stake (DPoS). EOS token holders are continuously voting (delegating) for their favorite block producer. The 21 block producers who receive the most votes produce blocks in a round robin manner. Each producer generates up to 12 blocks and send them to the network. Each block extends the last block in the chain and it is digitally signed by the block producer. The voting process itself also occurs on chain, and the outcome of the voting is reflected in a block header. Namely, whenever the set of BP changes, the public keys of the new BP set are encoded in a dedicated block header. \\The underlying security assumption of the EOS protocol is that 2/3+1 of the BP set is honest. I.e., 15 out of the 21 BPs are always honest. \\In the Waterloo relay, relayers only relay the changes in the set of EOS block producers (BPs) instead of relaying all EOS block headers. The relay smart contract verifies EOS actions in the following way:
 \begin{enumerate}
     \item The contract starts with an initial set of genesis BPs.
     \item Whenever the set of BPs is changed, a proof for the finality of the change along with the new set of BPs is relayed to the contract. The contract verifies the proof and stores the new set if the proof is valid.
-    \item To verify that an action occurred on the EOS chain, a proof consists of (i) a block header B signed by the current set of BPs; (ii) an earlier block header B’ that contains the action to verify along with a merkle branch that proves the action is included in the header; and (iii) a merkle branch to prove that B’ is in block B previous blocks merkle tree. In fact, EOS includes in the block headers the Merkle root of all the blocks in the blockchain (unfortunately we are not that lucky with BSC and we don't have this Merkle root).
+    \item To verify that an action occurred on the EOS chain, a proof consists of (i) a block header B signed by the current set of BPs; (ii) an earlier block header B’ that contains the action to verify along with a Merkle branch that proves the action is included in the header; and (iii) a Merkle branch to prove that B’ is included in block B Merkle tree of previous blocks. In fact, EOS includes in the block headers the Merkle root of all the blocks in the blockchain (unfortunately we are not that lucky with BSC and we don't have this Merkle root).
 \end{enumerate}
 %Along with the smart contract, Waterloo also provides a client to facilitate the relay in (2) and the proof construction for item (3).
 
