--- a/tex/main.tex
+++ b/tex/main.tex
@@ -95,8 +95,9 @@
 
 
 %-------------------------------------------------------------------------------
-\bibliographystyle{plain}
-\bibliography{bibliography/ref}
+%\bibliographystyle{plain}
+%\\
+%\bibliography{bibliography/ref}
 
 \appendix
 
