ropsten deployment + submission missing EB

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -75,34 +75,33 @@
 
 %-------------------------------------------------------------------------------
 \begin{document}
-%-------------------------------------------------------------------------------
-
-%don't want date printed
-\date{}
-
-% make title bold and 14 pt font (Latex default is non-bold, 16 pt)
-\title{\Large \bf BSC $\rightarrow$ ETH Relay}
-
-
-\maketitle
-
-%-------------------------------------------------------------------------------
-
-\input{intro}
-\input{relatedWork}
-\input{BSC}
-\input{relay}
-
-
-%-------------------------------------------------------------------------------
-%\bibliographystyle{plain}
-%\\
-%\bibliography{bibliography/ref}
-
-\appendix
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	%-------------------------------------------------------------------------------
+	
+	%don't want date printed
+	\date{}
+	
+	% make title bold and 14 pt font (Latex default is non-bold, 16 pt)
+	\title{\Large \bf BSC $\rightarrow$ ETH Relay}
+	
+	
+	\maketitle
+	
+	%-------------------------------------------------------------------------------
+	
+	\input{intro}
+	\input{relatedWork}
+	\input{BSC}
+	\input{relay}
+	
+	
+	%-------------------------------------------------------------------------------
+	%\bibliographystyle{plain}
+	%\bibliography{bibliography/ref}
+	
+	%\appendix
+	
+	
+	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
